Подготовил класс под разные типы врагов - Убрал интерфейс IEnemy, реализовал вместо него абстрактынй класс Enemy - Класс Swordsman, переименовал в Warrior - Методы, поля и свойства перенес из Warrior в Enemy

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 /Assets/External Assets/EmaceArt/Slavic World/Scenes
+/Assets/External Assets/EmaceArt/Slavic World/Terrain
