--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,18 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.3",
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.ide.rider": "3.0.21",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.postprocessing": "3.2.2",
-    "com.unity.terrain-tools": "4.0.5",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.terrain-tools": "5.0.1",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.5",
+    "com.unity.timeline": "1.7.4",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.5",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualeffectgraph": "12.1.11",
+    "com.unity.visualeffectgraph": "14.0.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
